fix term alignment

--- a/public/css/hc-suggestions.css
+++ b/public/css/hc-suggestions.css
@@ -135,7 +135,7 @@
 }
 
 .hc-suggestions-widget .terms {
-	line-height: 2em;
+	margin-top: 0.25em;
 }
 
 .hc-suggestions-widget .term {
